--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 
-<app-users></app-users>
-<app-posts></app-posts>
-<app-comments></app-comments>
+<app-users class="users"></app-users>
+<app-posts class="posts"></app-posts>
+<app-comments class="comments"></app-comments>
