--- a/src/app/components/comments/comments.component.html
+++ b/src/app/components/comments/comments.component.html
@@ -1,1 +1,1 @@
-<app-comment *ngFor="let c of comments" [comment]="c"></app-comment>
+<app-comment *ngFor="let c of comments" [comment]="c" class="mainComments"></app-comment>
