--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,43 @@
-h1 {
-  background:gold;
+
+.users {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+  background: gold;
+  width: 100%;
+  height: 100%;
+  row-gap: 40px;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  border: 5px solid white;
+  border-radius: 8px;
+}
+
+.posts {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  background: red;
+  border: 5px solid white;
+  border-radius: 8px;
+  width: 100%;
+  height: 100%;
+  row-gap: 40px;
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+.comments {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  background: #0cb3ee;
+  border: 5px solid white;
+  border-radius: 8px;
+  width: 100%;
+  height: 100%;
+  row-gap: 40px;
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
