--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,1 +1,12 @@
-<p>user works!</p>
+<div>
+  <h1>id: {{user.id}}</h1>
+  <h3>name:{{user.name}}</h3>
+  <h3>username:{{user.username}}</h3>
+  <h3>email:{{user.email}}</h3>
+  <ol>address:
+    <li> street:{{user.address.street}}</li>
+    <li> suite:{{user.address.suite}}</li>
+    <li> city:{{user.address.city}}</li>
+    <li> zipcode:{{user.address.zipcode}}</li>
+  </ol>
+</div>
