--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
 
-<app-users></app-users>
+<ul>
+  <li><a routerLink="home_page">Home</a></li>
+  <li><a routerLink="users_page">Information about all users</a></li>
+</ul>
+
+<router-outlet></router-outlet>
+
