--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -1,1 +1,3 @@
-<app-user *ngFor="let u of users" [user]="u"></app-user>
+<app-user *ngFor="let user of users" [user]="user"></app-user>
+
+<router-outlet></router-outlet>
