--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,8 @@
 <ul>
   <li><a routerLink="home_page">Home</a></li>
   <li><a routerLink="users_page">Information about all users</a></li>
+  <li><a routerLink="posts_page">Information about all posts</a></li>
+  <li><a routerLink="comments_page">Information about all comments</a></li>
 </ul>
 
 <router-outlet></router-outlet>
