--- a/src/app/components/comment/comment.component.html
+++ b/src/app/components/comment/comment.component.html
@@ -1,1 +1,9 @@
-<p>comment works!</p>
+<div>
+
+  <h1>postId:{{comment.postId}}</h1>
+  <h4>id:{{comment.id}}</h4>
+  <p>name:{{comment.name}}</p>
+
+  <a [routerLink]="['comment_details',comment.id]" [state]="{data:comment}">DETAILS</a>
+
+</div>
