--- a/src/app/components/user-details/user-details.component.html
+++ b/src/app/components/user-details/user-details.component.html
@@ -1,24 +1,24 @@
 <div>
-  <h1>id: {{userDetails.id}}</h1>
-  <h3>name:{{userDetails.name}}</h3>
-  <h3>username:{{userDetails.username}}</h3>
-  <h3>email:{{userDetails.email}}</h3>
+  <h1>id: {{userDetails?.id}}</h1>
+  <h3>name:{{userDetails?.name}}</h3>
+  <h3>username:{{userDetails?.username}}</h3>
+  <h3>email:{{userDetails?.email}}</h3>
   <ol>address:
-    <li> street:{{userDetails.address.street}}</li>
-    <li> suite:{{userDetails.address.suite}}</li>
-    <li> city:{{userDetails.address.city}}</li>
-    <li> zipcode:{{userDetails.address.zipcode}}</li>
+    <li> street:{{userDetails?.address?.street}}</li>
+    <li> suite:{{userDetails?.address?.suite}}</li>
+    <li> city:{{userDetails?.address?.city}}</li>
+    <li> zipcode:{{userDetails?.address?.zipcode}}</li>
   </ol>
   <ul>geo:
-    <li>lat:{{userDetails.address.geo.lat}}</li>
-    <li>lng:{{userDetails.address.geo.lng}}</li>
+    <li>lat:{{userDetails?.address?.geo?.lat}}</li>
+    <li>lng:{{userDetails?.address?.geo?.lng}}</li>
   </ul>
-  <h3>phone:{{userDetails.phone}}</h3>
-  <h3>website:{{userDetails.website}}</h3>
+  <h3>phone:{{userDetails?.phone}}</h3>
+  <h3>website:{{userDetails?.website}}</h3>
   <ul>company:
-    <li>name:{{userDetails.company.name}}</li>
-    <li>catchPhrase:{{userDetails.company.catchPhrase}}</li>
-    <li>bs:{{userDetails.company.bs}}</li>
+    <li>name:{{userDetails?.company?.name}}</li>
+    <li>catchPhrase:{{userDetails?.company?.catchPhrase}}</li>
+    <li>bs:{{userDetails?.company?.bs}}</li>
   </ul>
 
 </div>
