--- a/src/app/components/users/users.component.css
+++ b/src/app/components/users/users.component.css
@@ -1,1 +1,14 @@
 
+.users{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+  background: #62d7ff;
+  height: 100%;
+  row-gap: 40px;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  border: 5px solid gold;
+  border-radius: 8px;
+}
