--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -1,3 +1,6 @@
-<app-user *ngFor="let user of users" [user]="user"></app-user>
+<div class="users">
+  <app-user *ngFor="let user of users" [user]="user"></app-user>
+</div>
+
 
 <router-outlet></router-outlet>
