--- a/src/app/components/user-details/user-details.component.html
+++ b/src/app/components/user-details/user-details.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="userDetails">
   <h1>id: {{userDetails?.id}}</h1>
   <h3>name:{{userDetails?.name}}</h3>
   <h3>username:{{userDetails?.username}}</h3>
