--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,4 +1,4 @@
-<div class="user">
+<div class="userMain">
   <h1>id: {{user.id}}</h1>
   <h3>name:{{user.name}}</h3>
   <h3>username:{{user.username}}</h3>
@@ -7,5 +7,5 @@
 <!--  <a routerLink="user_details/{{user.id}}" >DETAILS</a>-->
 
   <a [routerLink]="['user_details',user.id]">DETAILS</a>
-  <hr>
+
 </div>
