--- a/src/app/components/post-details/post-details.component.html
+++ b/src/app/components/post-details/post-details.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="postDetails">
   <h1>userId: {{postDetails.userId}}</h1>
   <h3>id: {{postDetails.id}}</h3>
   <p>title:{{postDetails.title}}</p>
