--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -1,9 +1,8 @@
-<div>
+<div class="mainPost">
   <h1>userId: {{post.userId}}</h1>
   <h3>id: {{post.id}}</h3>
   <p>title:{{post.title}}</p>
 
   <a [routerLink]="['post_details',post.id]">DETAILS</a>
 
-  <hr>
 </div>
