--- a/src/app/components/posts/posts.component.html
+++ b/src/app/components/posts/posts.component.html
@@ -1,3 +1,10 @@
-<app-post *ngFor="let post of posts" [post]="post"></app-post>
+<div class="posts">
+  <app-post *ngFor="let post of posts" [post]="post" class="post"></app-post>
+</div>
 
-<router-outlet></router-outlet>
+
+
+<div class="mainPostDetails" >
+  <router-outlet></router-outlet>
+</div>
+
