--- a/src/app/components/comment/comment.component.html
+++ b/src/app/components/comment/comment.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="mainComment" >
 
   <h1>postId:{{comment.postId}}</h1>
   <h4>id:{{comment.id}}</h4>
@@ -6,6 +6,5 @@
 
   <a [routerLink]="['comment_details',comment.id]" [state]="{data:comment}">DETAILS</a>
 
-  <hr>
 
 </div>
