--- a/src/app/components/comments/comments.component.html
+++ b/src/app/components/comments/comments.component.html
@@ -1,3 +1,8 @@
-<app-comment *ngFor="let comment of comments" [comment]="comment" ></app-comment>
+<div class="comments">
+  <app-comment *ngFor="let comment of comments" [comment]="comment" class="comment"></app-comment>
+</div>
 
-<router-outlet></router-outlet>
+<div class="mainCommentDetails">
+  <router-outlet></router-outlet>
+</div>
+
