--- a/src/app/commponents/posts/posts-component/posts-component.component.html
+++ b/src/app/commponents/posts/posts-component/posts-component.component.html
@@ -1,1 +1,3 @@
-<p>posts-component works!</p>
+<app-post-component *ngFor="let post of posts" [post]="post"></app-post-component>
+
+<router-outlet></router-outlet>
