--- a/src/app/commponents/posts/post-component/post-component.component.html
+++ b/src/app/commponents/posts/post-component/post-component.component.html
@@ -4,6 +4,8 @@
   <h3>id: {{post.id}}</h3>
   <p>title:{{post.title}}</p>
 
+  <!--  МЕТОД ВІДОБРАЖЕННЯ ІНФИ ПРИ ЗВЕРНЕННІ ДО СЕРВІСУ і DDOS СЕРВЕРА-->
+
   <a [routerLink]="['post_details',post.id]">DETAILS</a>
 
 </div>
