--- a/src/app/commponents/todos/todos-component/todos-component.component.html
+++ b/src/app/commponents/todos/todos-component/todos-component.component.html
@@ -1,1 +1,3 @@
-<p>todos-component works!</p>
+<app-todo-component *ngFor="let todo of todos" [todo]="todo"></app-todo-component>
+
+<router-outlet></router-outlet>
