--- a/src/app/commponents/users/user-component/user-component.component.html
+++ b/src/app/commponents/users/user-component/user-component.component.html
@@ -5,6 +5,8 @@
   <h3>username:{{user.username}}</h3>
   <h3>email:{{user.email}}</h3>
 
+<!--  МЕТОД ВІДОБРАЖЕННЯ ІНФИ ПРИ ЗВЕРНЕННІ ДО СЕРВІСУ і DDOS СЕРВЕРА-->
+
   <a [routerLink]="['user_details',user.id]">DETAILS</a>
 
 </div>
