--- a/src/app/commponents/todos/todo-details-component/todo-details-component.component.html
+++ b/src/app/commponents/todos/todo-details-component/todo-details-component.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="todoDetails">
+<div *ngIf="todoDetails" class="todoDetailsInfo">
 
   <h1>userId: {{todoDetails.userId}}</h1>
   <h4>id: {{todoDetails.id}}</h4>
