--- a/src/app/commponents/users/user-details-component/user-details-component.component.html
+++ b/src/app/commponents/users/user-details-component/user-details-component.component.html
@@ -1,5 +1,5 @@
 
-  <div *ngIf="userDetails">
+  <div *ngIf="userDetails" class="userDetailsInfo">
 
     <h1>id: {{userDetails.id}}</h1>
     <h3>name:{{userDetails.name}}</h3>
