--- a/src/app/commponents/posts/post-details-component/post-details-component.component.html
+++ b/src/app/commponents/posts/post-details-component/post-details-component.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="postDetails" class="postDetailsInfo">
+<div class="postDetailsInfo">
 
   <h1>userId: {{postDetails.userId}}</h1>
   <h3>id: {{postDetails.id}}</h3>
