--- a/src/app/commponents/comments/comment-details-component/comment-details-component.component.html
+++ b/src/app/commponents/comments/comment-details-component/comment-details-component.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="commentDetails" class="commentDetailsInfo">
+<div class="commentDetailsInfo">
 
   <h1>postId:{{commentDetails.postId}}</h1>
   <h4>id:{{commentDetails.id}}</h4>
