--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 
 <div class="header">
-    <div routerLinkActive="active">
+    <div>
       <a [routerLink]="['']">Home</a>
     </div>
     <div routerLinkActive="active">
