--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -16,8 +16,11 @@
 
 <form [formGroup]="form">
   <div><label>username:<input type="text" formControlName="username"></label></div>
+  <span *ngIf="usernameError">{{usernameError}}</span>
   <div><label>password:<input type="text" formControlName="password"></label></div>
   <div><label>confirmPassword:<input type="text" formControlName="confirmPassword"></label></div>
+  <span *ngIf="form.errors">{{form.errors['notSame']}}</span>
+<!--  Якщо поля не співпадають отримуємо true якщо співпадають то true не буде (це перевірка)-->
   <button [disabled]="form.invalid"  (click)="register()">Register</button>
 </form>
 
