--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
-<app-home></app-home>
+<div>
+  <a [routerLink]="['']">Home</a>
+<!--  <a [routerLinkActive]="['list_of_movies']"></a>-->
+  <!--  <a [routerLinkActive]="['']"></a>-->
+  <!--  <a [routerLinkActive]="['']"></a>-->
+</div>
+
+
