--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
 <div>
   <a [routerLink]="['']">Home</a>
-<!--  <a [routerLinkActive]="['list_of_movies']"></a>-->
+  <a [routerLink]="['list_of_movies']">List of movies</a>
   <!--  <a [routerLinkActive]="['']"></a>-->
   <!--  <a [routerLinkActive]="['']"></a>-->
 </div>
 
+<router-outlet></router-outlet>
 
