--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,11 @@
-<div>
-  <a [routerLink]="['']">Home</a>
-  <a [routerLink]="['list_of_movies']">List of movies</a>
+<div class="header">
+  <div>
+    <a [routerLink]="['']">Home</a>
+  </div>
+  <div>
+    <a [routerLink]="['list_of_movies']">List of movies</a>
+  </div>
+
   <!--  <a [routerLinkActive]="['']"></a>-->
   <!--  <a [routerLinkActive]="['']"></a>-->
 </div>
