--- a/src/app/components/movies-list/movie/movie.component.html
+++ b/src/app/components/movies-list/movie/movie.component.html
@@ -1,1 +1,9 @@
-<p>movie works!</p>
+<div *ngIf="movie">
+
+  <div>
+    <img src="https://image.tmdb.org/t/p/w300{{movie.poster_path}}" alt="{{movie.original_title}}"/>
+  </div>
+  <h2>{{movie.original_title}}</h2>
+  <h2>{{movie.release_date}}</h2>
+  <h2>{{movie.vote_average}}</h2>
+</div>
