--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,17 @@
 <div class="header">
+
   <div>
     <a [routerLink]="['']">Home</a>
   </div>
+
+  <div>
+    <a [routerLink]="['list_of_genres']">List of genres</a>
+  </div>
+
   <div>
     <a [routerLink]="['list_of_movies']">List of movies</a>
   </div>
 
-  <!--  <a [routerLinkActive]="['']"></a>-->
-  <!--  <a [routerLinkActive]="['']"></a>-->
 </div>
 
 <router-outlet></router-outlet>
