--- a/src/app/components/movies-list/movie/movie.component.html
+++ b/src/app/components/movies-list/movie/movie.component.html
@@ -5,5 +5,5 @@
   </div>
   <h2>{{movie.original_title}}</h2>
   <h2>{{movie.release_date}}</h2>
-  <h2>{{movie.vote_average}}</h2>
+  <h2>Vote average: {{movie.vote_average}}</h2>
 </div>
