--- a/src/app/components/genres-list/genre/genre.component.html
+++ b/src/app/components/genres-list/genre/genre.component.html
@@ -1,1 +1,11 @@
-<p>genre works!</p>
+<div *ngIf="genre">
+
+  <button (click)="genre_selection()">{{genre.name}}</button>
+
+  <div>
+
+    <router-outlet></router-outlet>
+
+  </div>
+
+</div>
